# safe-fuse-test

./: Cargo.toml  README.md
src/: main.rs
