[package]
name = "safe-fuse"
version = "0.1.0"
authors = ["Mark <git@happybeing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.39"
fuse_mt = "0.4.4"
libc = "0.2"
users = "0.9"
blake2 = "0.7.0"
hex = "0.3.1"
serde = "1"
serde_derive = "1"
bincode = "1"
rusqlite = "0.14"
crossbeam-utils = "0.5"
toml = "0.5"
base64 = "0.11"
rand = "0.5"

[profile.dev]
opt-level = 3
